# hrp-portfolio

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
docs/decisions/: 0001-single-linkage-default.md  0002-shared-covariance-fairness.md  0003-shrunk-mu.md  0004-distance-formula.md  0005-purge-embargo.md  0006-dsr-multiplicity.md
src/hrp/: __init__.py  _exceptions.py  _manifest.py  _typing.py  _validation.py  cli.py  data.py  plots.py
src/hrp/allocate/: __init__.py  hrp.py  ivp.py  markowitz_adapter.py  naive.py
src/hrp/backtest/: __init__.py  costs.py  stats.py  walk_forward.py
src/hrp/cluster/: __init__.py  distance.py  linkage.py  quasidiag.py
src/hrp/data_providers/: __init__.py  polygon.py
src/hrp/estimators/: __init__.py  covariance.py  mu.py  rmt.py
src/hrp/evaluation/: __init__.py  comparison.py  dsr.py  verdict.py
tests/: conftest.py
tests/integration/: __init__.py
tests/parity/: __init__.py  test_parity_hrp_oracle.py
tests/property/: __init__.py  test_invariants.py
tests/regression/: __init__.py  test_regression_hrp_horse_race.py
tests/unit/: __init__.py  test_core_edge_cases.py  test_data_and_helpers.py  test_estimators.py  test_markowitz_and_stats.py  test_plots_and_cli.py  test_polygon_provider.py
