[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrp-portfolio"
version = "0.1.0"
description = "From-scratch Hierarchical Risk Parity (Lopez de Prado 2016), benchmarked honestly out-of-sample against Markowitz, IVP, and naive 1/N."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FatihHekim0glu" }]
keywords = [
    "hierarchical-risk-parity",
    "hrp",
    "portfolio-optimization",
    "risk-parity",
    "quantitative-finance",
    "clustering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
]

[project.urls]
Homepage = "https://fatihhekimoglu.com"
Repository = "https://github.com/FatihHekim0glu/hrp-portfolio"
Changelog = "https://github.com/FatihHekim0glu/hrp-portfolio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Survivorship-aware + free data path (yfinance->stooq fallback, parquet/diskcache cache).
data = [
    "yfinance>=0.2.40",
    "curl_cffi>=0.7",
    "pyarrow>=15.0",
    "diskcache>=5.6",
    "pandas-datareader>=0.10",
]
# Plotly figure builders (figures serialize to {data, layout} JSON).
viz = [
    "plotly>=5.20",
    "kaleido>=0.2.1",
]
# Local interactive Streamlit demo (strictly decoupled from src/).
app = [
    "streamlit>=1.33",
]
# Developer + parity-oracle + lint/type/test stack.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "PyPortfolioOpt>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]
# Convex max-Sharpe solver (lazily imported inside functions only).
cvxpy = [
    "cvxpy>=1.4",
]
# Convenience aggregate of every runtime extra (NOT used by the lean API container).
all = [
    "yfinance>=0.2.40",
    "curl_cffi>=0.7",
    "pyarrow>=15.0",
    "diskcache>=5.6",
    "pandas-datareader>=0.10",
    "plotly>=5.20",
    "kaleido>=0.2.1",
    "streamlit>=1.33",
    "cvxpy>=1.4",
]

[project.scripts]
hrp = "hrp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hrp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hrp",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "CITATION.cff",
]

# --------------------------------------------------------------------------- #
# Ruff                                                                        #
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "NPY",  # numpy-specific
    "PD",   # pandas-vet
]
ignore = [
    "E501",    # line length handled by formatter
    "PD901",   # allow `df` as a variable name in compute kernels
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]  # math-style names (T, N, Sigma) in tests

[tool.ruff.lint.pep8-naming]
# Math-style single-capital names (covariance Sigma, sample count T/N) are intentional.
extend-ignore-names = ["N", "T", "Sigma", "Sigma_hat", "W", "D"]

# --------------------------------------------------------------------------- #
# mypy (strict)                                                               #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src/hrp"]

# Documented pandas override: pandas-stubs is incomplete for some DataFrame
# operations; we accept untyped pandas internals at the boundary while keeping
# our own signatures strictly typed. (House convention: curated pandas suppression.)
[[tool.mypy.overrides]]
module = ["pandas.*"]
follow_imports = "skip"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "sklearn.*",
    "statsmodels.*",
    "cvxpy.*",
    "yfinance.*",
    "pandas_datareader.*",
    "diskcache.*",
    "plotly.*",
    "pypfopt.*",
]
ignore_missing_imports = true

# --------------------------------------------------------------------------- #
# pytest                                                                       #
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "unit: fast isolated unit tests",
    "property: Hypothesis property-based invariant tests",
    "parity: validation against an independent reference implementation",
    "regression: pinned-snapshot / locked-behaviour tests",
    "integration: end-to-end pipeline tests (may touch data/network)",
    "slow: long-running tests",
]

# --------------------------------------------------------------------------- #
# Coverage                                                                     #
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["hrp"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
